--- a/index.html
+++ b/index.html
@@ -67,44 +67,26 @@
     <!-- end of navbar -->
 
     <!-- header -->
-    <div class="container-fluid p-0 py-5">
-        <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="w-100" src="images/banner-1.jpg" alt="YTY">
-                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
-                            <h5 class="text-white text-uppercase">Best Collection</h5>
-                            <h1 class="display-2 text-white text-uppercase mb-md-4">New Arrivals</h1>
-                            <a href="https://yty.ulinkwebsite.com" class="btn btn-primary py-md-3 px-md-5 me-3">Shop Now</a>
-                            <a href="#contacts" class="btn btn-light py-md-3 px-md-5">Contact Us</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="w-100" src="images/banner-2.jpg" alt="YTY">
-                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
-                            <h5 class="text-white text-uppercase">Best Price & Offer</h5>
-                            <h1 class="display-2 text-white text-uppercase mb-md-4">New Season</h1>
-                            <a href="https://yty.ulinkwebsite.com" class="btn btn-primary py-md-3 px-md-5 me-3">Buy Now</a>
-                            <a href="#contacts" class="btn btn-light py-md-3 px-md-5">Contact Us</a>
-                        </div>
-                    </div>
-                </div>
+    <header id = "header" class = "vh-100 carousel slide" data-bs-ride = "carousel" style = "padding-top: 104px;">
+        <div class = "container h-100 d-flex align-items-center carousel-inner">
+            <div class = "text-center carousel-item active">
+                <h2 class = "text-capitalize text-white">best collection</h2>
+                <h1 class = "text-uppercase py-2 fw-bold text-white">new arrivals</h1>
+                <a href = "#" class = "btn mt-3 text-uppercase">shop now</a>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#header-carousel"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+            <div class = "text-center carousel-item">
+                <h2 class = "text-capitalize text-white">best price & offer</h2>
+                <h1 class = "text-uppercase py-2 fw-bold text-white">new season</h1>
+                <a href = "#" class = "btn mt-3 text-uppercase">buy now</a>
+            </div>
         </div>
-    </div>
+
+        <button class = "carousel-control-prev" type = "button" data-bs-target="#header" data-bs-slide = "prev">
+            <span class = "carousel-control-prev-icon"></span>
+        </button>
+        <button class = "carousel-control-next" type = "button" data-bs-target="#header" data-bs-slide = "next">
+            <span class = "carousel-control-next-icon"></span>
+        </button>
     <!-- end of header -->
 
     <!-- collection -->
