--- a/index.html
+++ b/index.html
@@ -448,15 +448,15 @@
                     <div class = "d-flex align-items-start justify-content-start">
                         <img src = "images/peach.png" alt = "" class = "img-fluid pe-3 w-25">
                         <div>
-                            <p class = "mb-0">Blue Shirt</p>
+                            <p class = "mb-0">Peach Shirt</p>
                             <span>UGX 35,000</span>
                         </div>
                     </div>
                     <div class = "d-flex align-items-start justify-content-start">
-                        <img src = "images/top_rated_3.jpg" alt = "" class = "img-fluid pe-3 w-25">
+                        <img src = "images/shoe_white.png" alt = "" class = "img-fluid pe-3 w-25">
                         <div>
-                            <p class = "mb-0">Peach Shirt</p>
-                            <span>$ 20.00</span>
+                            <p class = "mb-0">White Shoe</p>
+                            <span>UGX 120,000</span>
                         </div>
                     </div>
                 </div>
