--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
             <div class = "text-center carousel-item active">
                 <h2 class = "text-capitalize text-white">best collection</h2>
                 <h1 class = "text-uppercase py-2 fw-bold text-white">new arrivals</h1>
-                <a href = "#" class = "btn mt-3 text-uppercase">shop now</a>
+                <a href = "https://yty.ulinkwebsite.com" class = "btn mt-3 text-uppercase">shop now</a>
             </div>
             <div class = "text-center carousel-item">
                 <h2 class = "text-capitalize text-white">best price & offer</h2>
                 <h1 class = "text-uppercase py-2 fw-bold text-white">new season</h1>
-                <a href = "#" class = "btn mt-3 text-uppercase">buy now</a>
+                <a href = "https://yty.ulinkwebsite.com" class = "btn mt-3 text-uppercase">buy now</a>
             </div>
         </div>
 
@@ -621,6 +621,19 @@
                                 </a>
                             </li>
                         </ul>
+                    </div>
+                </div>
+                <div class="container-fluid copyright">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                                &copy; <a href="#Home">YTY</a>, All Right Reserved.
+                            </div>
+                            <div class="col-md-6 text-center text-md-end">
+                                <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                                Designed By <a href="https://www.instagram.com/thorhenry18/">Thor Henry</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
